@@ -1,3 +1,8 @@
+2013-04-03 Riccardo Mottola <rm@gnu.org>
+
+	* AppController.m
+	Write Delete results to results.csv in the same directory as the source file.
+
 2013-04-02 Riccardo Mottola <rm@gnu.org>
 
 	* DBCVSWriter.[h,m] (formatOneLine)
